--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap" rel="stylesheet">
   <title>Meu Portfólio</title>
 </head>
 
 <body>
-  <nav>
-    <div class="container-1">
-      <div class="meu-portfolio">
-        <h3>Eleve seu negócio digital a outro nível <span id="destaque">com UX Design de qualidade!</span></h3>
-        <p>Olá, meu nome é Ana Gomes. Sou estudante de Sistemas de Informação. Possuo conhecimento em Figma e Design
-          Centrado no Usuário.</p>
+  <div class="container-1">
+    <div class="meu-portfolio">
+      <img class="img-ana" src="img/ana-gomes.jpg" alt="Ana Gomes">
+      <h1>Olá, eu sou <span>Ana Gomes</span>!</h1>
+      <p>Estudante de Sistemas de Informação, na Universidade Federal do Sul e Sudeste do
+        Pará. Possuo conhecimento em Figma e UX Design.</p>
+      <p>Atualmente, sou estagiária na Unifesspa, realizando a criação de mídias para redes sociais, manuseio de sites
+        através do CMS Joomla e elaborando de declarações, memorandos, ofícios e processos internos. </p>
+      <p>Possuo conhecimentos Canva, Figma e Design centrado no usuário, bem como conhecimentos prévios em HTML e CSS!
+      </p>
+      <hr>
+      <div class="contato">
+        <h2>Entre em contato comigo:</h2>
         <a href="https://www.instagram.com/anaflxvia"><button class="button-ig">Instagram</button></a>
         <a href="https://www.github.com/nafleuris"><button class="button-git">Github</button></a>
       </div>
-      <br>
-      <img src="img/ana-gomes.jpg" alt="Ana Gomes" width="150px" height="150px">
     </div>
-  </nav>
+  </div>
 </body>
 
 </html>
